--- a/index.html
+++ b/index.html
@@ -1,92 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MECKANI - Explore the Craft</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css?v=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Explore how everything around you works – from bottles to the space station. Dive into MECKANI." />
+  <title>MECKANI | Explore the Craft</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="bg-gray-900 text-gray-300 font-sans">
+<body>
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">MECKANI</h1>
+      <ul class="nav-links">
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <header class="py-4 px-8 md:px-16 lg:px-24 bg-gray-800">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Raam's Network</h1>
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="index.html" class="hover:text-white">Home</a></li>
-                    <li><a href="about.html" class="hover:text-white">About</a></li>
-                    <li><a href="portfolio.html" class="hover:text-white">Portfolio</a></li>
-                    <li><a href="blog.html" class="hover:text-white">Blog</a></li>
-                    <li><a href="contact.html" class="hover:text-white">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Explore the Craft</h2>
+      <p>Dive into the mechanics of everything – from everyday objects to human-engineered wonders.</p>
+      <a href="#" class="cta-button">Start Exploring</a>
+    </div>
+  </section>
 
-    <main class="py-8 px-8 md:px-16 lg:px-24">
-        <div class="container mx-auto">
+  <section class="categories">
+    <h3>Popular Categories</h3>
+    <div class="card-grid">
+      <div class="card">Home Appliances</div>
+      <div class="card">Vehicles</div>
+      <div class="card">Electronics</div>
+      <div class="card">Tools</div>
+      <div class="card">Machines</div>
+      <div class="card">Space Tech</div>
+    </div>
+  </section>
 
-            <section class="mb-8">
-                <div class="bg-gray-700 rounded-lg py-16 px-8 text-center">
-                    <h2 class="text-4xl font-bold mb-4">Welcome to Raam's Network</h2>
-                    <p class="text-2xl mb-4">Your one-stop destination for diverse content.</p>
-                    <p class="text-lg mb-6">Explore our network, featuring Bigtown for seamless file sharing, Flashes for engaging short videos, informative infographics, and more.</p>
-                    <p class="mb-10"></p> <p></p> <p></p>
-                    <a href="https://whatsapp.com/channel/0029Vb6WbuW2UPBIQwLILw3L" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Join the Community</a>
-                </div>
-            </section>
+  <footer>
+    <p>&copy; 2025 MECKANI. All rights reserved.</p>
+  </footer>
 
-            <section id="bigtown" class="mb-8">
-                <a href="bigtown.html"><h2 class="text-3xl font-bold mb-4 hover:text-white">Bigtown</h2></a>
-                <div class="bg-gray-700 rounded-lg py-8 px-8">
-                    <p>A collaborative platform for sharing and discussing large files.</p>
-                </div>
-            </section>
-
-            <section id="flashes" class="mb-8">
-                <a href="flashes.html"><h2 class="text-3xl font-bold mb-4 hover:text-white">Flashes</h2></a>
-                <div class="bg-gray-700 rounded-lg py-8 px-8">
-                    <p>Short-form videos to capture and share your moments.</p>
-                </div>
-            </section>
-
-            <section id="infographics" class="mb-8">
-                <h2 class="text-3xl font-bold mb-4 hover:text-white">Infographics & Data</h2>
-                <div class="bg-gray-700 rounded-lg py-8 px-8">
-                    <p>Visual representations of data and information.</p>
-                </div>
-            </section>
-
-            <section id="livestreams" class="mb-8">
-                <h2 class="text-3xl font-bold mb-4 hover:text-white">Live Streams</h2>
-                <div class="bg-gray-700 rounded-lg py-8 px-8">
-                    <p>Watch live streams of events and connect with others.</p>
-                </div>
-            </section>
-
-            <section id="social" class="mb-8">
-                <h2 class="text-3xl font-bold mb-4 hover:text-white">Social Media</h2>
-                <div class="bg-gray-700 rounded-lg py-8 px-8">
-                    <p>Connect with us on your favorite social media platforms.</p>
-                </div>
-            </section>
-
-            <section id="podcasts" class="mb-8">
-                <h2 class="text-3xl font-bold mb-4 hover:text-white">Podcasts</h2>
-                <div class="bg-gray-700 rounded-lg py-8 px-8">
-                    <p>Listen to our podcasts on a variety of topics.</p>
-                </div>
-            </section>
-
-        </div>
-    </main>
-
-    <footer class="py-4 px-8 md:px-16 lg:px-24 bg-gray-800 text-center">
-        <div class="container mx-auto">
-            <p>&copy; 2025 Raam's Network. All rights reserved.</p>
-        </div>
-    </footer>
-
+  <script src="js/main.js"></script>
 </body>
 </html>
