--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Explore how everything around you works – from bottles to the space station. Dive into MECKANI." />
-  <title>MECKANI | Explore the Craft</title>
+  <title>MECKANI - Explore the Craft</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
