--- a/about.html
+++ b/about.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Raam's Network</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css?v=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="About MECKANI – Explore the Craft" />
+  <title>About | MECKANI</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="bg-gray-900 text-gray-300 font-sans">
+<body>
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">MECKANI</h1>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html" class="active">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <header class="py-4 px-8 md:px-16 lg:px-24 bg-gray-800">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Raam's Network</h1>
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="index.html" class="hover:text-white">Home</a></li>
-                    <li><a href="about.html" class="hover:text-white">About</a></li>
-                    <li><a href="portfolio.html" class="hover:text-white">Portfolio</a></li>
-                    <li><a href="blog.html" class="hover:text-white">Blog</a></li>
-                    <li><a href="contact.html" class="hover:text-white">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <section class="hero">
+    <div class="hero-content">
+      <h2>About MECKANI</h2>
+      <p>Discover the philosophy behind our platform and how we bring technology and curiosity together.</p>
+    </div>
+  </section>
 
-    <main class="py-8 px-8 md:px-16 lg:px-24">
-        <div class="container mx-auto">
-            <h1 class="text-3xl font-bold mb-4">About Me</h1>
+  <section class="about-section" style="padding: 2rem;">
+    <div class="about-text">
+      <p>
+        MECKANI is a digital encyclopedia dedicated to unveiling the inner workings of objects all around us — from the simplest household item to the most complex scientific machines.
+        Our mission is to empower the curious, the thinkers, and the builders by offering structured, accessible, and beautifully organized content — including videos, diagrams, and insightful blog-style writeups.
+      </p>
+      <p style="margin-top: 1.5rem;">
+        Whether you're a student, an engineer, a hobbyist, or just someone who loves understanding "how stuff works," MECKANI is your go-to exploration space.
+      </p>
+    </div>
+  </section>
 
-            <div id="about-content">
-                </div>
-
-        </div>
-    </main>
-
-    <footer class="py-4 px-8 md:px-16 lg:px-24 bg-gray-800 text-center">
-        <div class="container mx-auto">
-            <p>&copy; 2025 Raam's Network. All rights reserved.</p>
-        </div>
-    </footer>
-
+  <footer>
+    <p>&copy; 2025 MECKANI. All rights reserved.</p>
+  </footer>
 </body>
 </html>
