--- a/contact.html
+++ b/contact.html
@@ -1,59 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Raam's Network</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="style.css?v=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Contact MECKANI" />
+  <title>Contact | MECKANI</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
-<body class="bg-gray-900 text-gray-300 font-sans">
+<body>
+  <header>
+    <nav class="navbar">
+      <h1 class="logo">MECKANI</h1>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html" class="active">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <header class="py-4 px-8 md:px-16 lg:px-24 bg-gray-800">
-        <div class="container mx-auto flex justify-between items-center">
-            <h1 class="text-2xl font-bold">Raam's Network</h1>
-            <nav>
-                <ul class="flex space-x-4">
-                    <li><a href="index.html" class="hover:text-white">Home</a></li>
-                    <li><a href="about.html" class="hover:text-white">About</a></li>
-                    <li><a href="portfolio.html" class="hover:text-white">Portfolio</a></li>
-                    <li><a href="blog.html" class="hover:text-white">Blog</a></li>
-                    <li><a href="contact.html" class="hover:text-white">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <section class="hero">
+    <div class="hero-content">
+      <h2>Contact Us</h2>
+      <p>Have questions, ideas, or feedback? We'd love to hear from you.</p>
+    </div>
+  </section>
 
-    <main class="py-8 px-8 md:px-16 lg:px-24">
-        <div class="container mx-auto">
-            <h1 class="text-3xl font-bold mb-4">Contact Me</h1>
+  <section class="contact-form-section" style="padding: 2rem;">
+    <form class="contact-form" style="max-width: 500px; margin: auto;">
+      <label for="name">Your Name</label><br/>
+      <input type="text" id="name" name="name" required style="width: 100%; padding: 0.5rem; margin: 0.5rem 0;"><br/>
 
-            <p>Email: <a href="mailto:vinitasharma0380@gmail.com" class="text-blue-500 hover:underline">vinitasharma0380@gmail.com</a></p>
-            <p>You can also reach me through the contact form below:</p>
+      <label for="email">Email</label><br/>
+      <input type="email" id="email" name="email" required style="width: 100%; padding: 0.5rem; margin: 0.5rem 0;"><br/>
 
-            <form id="contact-form" action="#" method="POST" class="mt-8">
-                <div class="mb-4">
-                    <label for="name" class="block text-gray-400 text-sm font-bold mb-2">Name</label>
-                    <input type="text" id="name" name="name" class="w-full px-3 py-2 border rounded bg-gray-800 text-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-                </div>
-                <div class="mb-4">
-                    <label for="email" class="block text-gray-400 text-sm font-bold mb-2">Email</label>
-                    <input type="email" id="email" name="email" class="w-full px-3 py-2 border rounded bg-gray-800 text-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-                </div>
-                <div class="mb-6">
-                    <label for="message" class="block text-gray-400 text-sm font-bold mb-2">Message</label>
-                    <textarea id="message" name="message" rows="4" class="w-full px-3 py-2 border rounded bg-gray-800 text-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500" required></textarea>
-                </div>
-                <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">Submit</button>
-            </form>
-        </div>
-    </main>
+      <label for="message">Message</label><br/>
+      <textarea id="message" name="message" rows="6" required style="width: 100%; padding: 0.5rem; margin: 0.5rem 0;"></textarea><br/>
 
-    <footer class="py-4 px-8 md:px-16 lg:px-24 bg-gray-800 text-center">
-        <div class="container mx-auto">
-            <p>&copy; 2025 Raam's Network. All rights reserved.</p>
-        </div>
-    </footer>
+      <button type="submit" class="cta-button">Send Message</button>
+    </form>
+  </section>
 
+  <footer>
+    <p>&copy; 2025 MECKANI. All rights reserved.</p>
+  </footer>
 </body>
 </html>
