--- a/about.html
+++ b/about.html
@@ -30,7 +30,8 @@
     <div class="about-text">
       <p>
         MECKANI is a digital encyclopedia dedicated to unveiling the inner workings of objects all around us — from the simplest household item to the most complex scientific machines.
-        Our mission is to empower the curious, the thinkers, and the builders by offering structured, accessible, and beautifully organized content — including videos, diagrams, and insightful blog-style writeups.
+        <br>
+Our mission is to empower the curious, the thinkers, and the builders by offering structured, accessible, and beautifully organized content — including videos, diagrams, and insightful data.
       </p>
       <p style="margin-top: 1.5rem;">
         Whether you're a student, an engineer, a hobbyist, or just someone who loves understanding "how stuff works," MECKANI is your go-to exploration space.
