--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
   <header>
     <nav class="navbar">
-      <h1 class="logo">MECKANI</h1>
+      <div class="logo-container">
+        <a href="index.html" class="logo-link">
+          <img src="images/main-logo.png" alt="MECKANI Logo" class="logo">
+        </a>
+      </div>
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="about.html">About</a></li>
@@ -43,6 +47,17 @@
     <p>&copy; 2025 MECKANI. All rights reserved.</p>
   </footer>
 
-  <script src="js/main.js"></script>
+  <script>
+    // Simple hover effect enhancement for cards
+    document.querySelectorAll('.card').forEach(card => {
+      card.addEventListener('mouseenter', () => {
+        card.style.zIndex = '10';
+      });
+      
+      card.addEventListener('mouseleave', () => {
+        card.style.zIndex = '1';
+      });
+    });
+  </script>
 </body>
 </html>
