--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </a>
       </div>
       
+      <!-- Website Name Image -->
+      <div class="website-name">
+        <img src="images/MECKANI-HomeTitle.png" alt="MECKANI" class="title-logo">
+      </div>
+      
       <!-- Hamburger Menu -->
       <div class="hamburger-menu">
         <div class="hamburger-icon">
